# SheLook

./: .env.dev.example  .env.example  .env.prod.example  .env.staging.example  .gitignore  PERFORMANCE.md  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  prometheus.yml  setup.ps1  setup.sh  前端.md  后端.md  方案.md  项目介绍.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  audit.py  auth.py  campaign_common.py  campaign_details.py  campaigns.py  clustering.py  dashboard.py  enterprise_data.py  experiment.py  fairness.py  flywheel.py  generation.py  integrations.py  metrics.py  organization.py  prediction.py  products.py  provider_configs.py  review.py  runtime_settings.py  schemes.py  supplier.py  video.py  workflows.py
backend/app/core/: __init__.py  audit.py  auth.py  deps.py  exceptions.py  external_identity.py  logging.py  middleware.py  rate_limit.py  tenant.py  tracing.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/models/: __init__.py  audit_log.py  brand_standard.py  campaign.py  enterprise_data.py  experiment.py  external_listing.py  image.py  integration.py  organization.py  prediction.py  product.py  product_embedding.py  provider_config.py  release_control.py  review.py  runtime_setting.py  supplier_report.py  supplier_score.py  workflow.py
backend/app/schemas/: __init__.py  auth.py  campaign.py  clustering.py  enterprise_data.py  experiment.py  fairness.py  generation.py  integration.py  metrics.py  organization.py  prediction.py  product.py  provider_config.py  review.py  runtime_setting.py  scheme.py  supplier.py  text_match.py  video.py  vision_reward.py  workflow.py
backend/app/services/: __init__.py  attribution.py  auto_reviewer.py  brand_service.py  c2pa_service.py  clustering_service.py  commerce_facts.py  compliance_checker.py  ctr_feedback.py  dashboard_cache.py  data_flywheel.py  dianxiaomi_adapter.py  embedding_service.py  experiment_auto_service.py  fairness_service.py  feature_flags.py  generation_service.py  image_analysis_utils.py  image_export_service.py  image_fetcher.py  image_search.py  image_text_matcher.py  integration_credentials.py  metrics_collector.py  metrics_reporter.py  pgvector_store.py  predictor.py  product_catalog_cache.py  provider_config_service.py  pubsub.py  reward_scorer.py  runtime_settings.py  scheme_recommender.py  storage_service.py  supplier_report.py  tenant_job_service.py  vector_store.py  video_generator.py  vision_reward.py  workflow_service.py
backend/app/tasks/: __init__.py  async_utils.py  celery_app.py  evaluation_task.py  experiment_task.py  flywheel_task.py  generation_task.py  integration_task.py  outbox_task.py  vector_task.py
backend/scripts/: __init__.py  demo_routes.md  init_minio.py  migrate_oidc_membership.py  provision_tenant.md  provision_tenant.py  reset_demo_data.py  seed_data.py  seed_mock_catalog.py  seed_mock_catalog_dense.py
backend/scripts/phase6/: __init__.py  release_gate.py  run_read_load.py  verify_data_integrity.py
backend/tests/: conftest.py  test_auth_login_providers.py  test_campaign_foundation.py  test_ctr_feedback_mapping.py  test_elastic_worker_routing.py  test_enterprise_audit_fixes.py  test_external_identity.py  test_health.py  test_logic_regressions.py  test_member_session_revocation.py  test_operational_baseline.py  test_phase6_release_controls.py  test_provider_config_service.py  test_provision_tenant.py  test_tenant_foundation.py  test_workflow_foundation.py
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  (+4 more)
(+136 files in other folders)
